Work on getting ACPICA to work. Printing the table headers now seems to work, but kmalloc() is allocating a pointer that is way larger than physical memory, and this is causing a crash in AcpiDsMethodDataInitArgs(). We have to fix kmalloc to get ACPICA to work.

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -7,4 +7,4 @@ OBJCOPY         := objcopy
 EFIINC          := /usr/include/efi
 EFIINCS         := -I$(EFIINC) -I$(EFIINC)/$(ARCH) -I$(EFIINC)/protocol
 
-CFLAGS_COMMON   := $(EFIINCS) -std=gnu99 -Wall -Wextra -Werror -Os
+CFLAGS_COMMON   := $(EFIINCS) -std=gnu99 -Wall -ggdb -Wextra -Werror -Os
